final final push

--- a/chickenFeed.html
+++ b/chickenFeed.html
@@ -434,7 +434,7 @@ anova(model1)</code></pre>
 </div>
 <div id="conclusions-which-variables-affect-chicken-weight" class="section level3">
 <h3>Conclusions – which variables affect chicken weight?</h3>
-<p>Here is my brilliant conclusion</p>
+<p>I can now conclude that the only variables that affect chicken weight is the feed.</p>
 </div>
 </div>
 
